add core functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <aside>
     <button class="button button--grid-size">Grid size</button>
     <button class="button button--normal">Normal</button>
-    <button class="button button--rainbow">Rainbow</input>
+    <button class="button button--rainbow">Rainbow</button>
+    <button class="button button--reset">Reset</button>
 </aside>
 <main>
     <article class="container">
