refactor: reduce container size

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button class="button button--normal">Normal</button>
     <button class="button button--rainbow">Rainbow</button>
     <button class="button button--reset">Reset</button>
+    <p class="mode"></p>
 </aside>
 <main>
     <article class="container">
